<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome</string>
    <string name="app_name">Shifty</string>
    <string name="login">Sign in</string>
    <string name="accountName">username:</string>
    <string name="password">password:</string>
    <string name="loginerror">login failed</string>
    <string name="contacts">contacts</string>
    <string name="add">add employees</string>
    <string name="group">group</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">back</string>
    <string name="OK">OK</string>
    <string name="listname">List name</string>
    <string name="text">Text message</string>
    <string name="select">Select items</string>
    <string name="numberAndOk">OK</string>
    <string name="addContacts">add</string>
    <string name="send">send</string>
    <string name="to">To</string>
    <string name="create">Create Shift</string>
    <string name="setdate">Set day, time, and location</string>
    <string name="settime">Set the time interval</string>
    <string name="from">start time</string>
    <string name="end">end time</string>
    <string name="setlocation">Set location</string>
    <string name="next">next</string>
    <string name="newpass">New password</string>
    <string name="reset">Reset password</string>
    <string name="error">Answer is not correct</string>
    <string name="recover">Recover password</string>
    <string name="invalid">Invalid username</string>
</resources>
