<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    android:background="#082847"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel2" />

        <EditText
            android:id="@+id/extraNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:hint="@string/to" />

        <Button
            android:id="@+id/addContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addContacts" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7.5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#0066CC"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/from" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/toend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/end" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setlocation"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar3"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/textContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:hint="@string/text" />

        <Button
            android:id="@+id/sendMsm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

</LinearLayout>