<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#306565">
   
    <LinearLayout 
        android:layout_width="fill_parent"
      	android:layout_height="fill_parent"
      	android:layout_weight="0.9">
      	 <TextView 
        android:id="@+id/showerror"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textColor="#FF0033"
        android:textSize="18dp"
        android:text="@string/loginerror"
        android:gravity="center"
        />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.1"
        android:orientation="vertical"
        >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:textColor="#ffffff"
                android:textSize="10pt"
                android:text="@string/accountName"
                android:layout_weight="0.6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
            </TextView>
       		<EditText 
       		    android:id="@+id/userName"
       		    android:layout_weight="0.4"
       		    android:layout_width="fill_parent"
       		    android:layout_height="wrap_content"
       		    />
            
            </LinearLayout>
            
        <LinearLayout
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
       		
             <TextView 
                android:textColor="#ffffff"
                android:textSize="10pt"
                android:text="@string/password"
                android:layout_weight="0.6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >
            </TextView>
       		<EditText 
       		    android:id="@+id/passWord"
       		    android:layout_weight="0.4"
       		    android:layout_width="fill_parent"
       		    android:password="true"
       		    android:layout_height="wrap_content"
       		    />
            
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <Button
            android:layout_marginTop="20px"
		    android:id="@+id/loginbutton"
		    android:textSize="9pt"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/login"
            android:textColor="#FFFFFF"
            android:background="#6D1D1C"/>
		       
        </LinearLayout>

        <Button
            android:layout_marginTop="20px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover"
            android:textColor="#FFFFFF"
            android:id="@+id/recover"
            android:layout_gravity="right"
            android:background="#6D1D1C"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:visibility="invisible" />

    </LinearLayout>
</LinearLayout>
