<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#082847">

    <TextView
        android:layout_width="282dp"
        android:layout_height="37dp"
        android:text="@string/invalid"
        android:id="@+id/showerror"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff0000"
        android:textSize="28dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="question"
        android:id="@+id/question"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09"
        android:textSize="36dp"
        android:visibility="visible" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answer"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09"
        android:hint="answer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newpass"
        android:id="@+id/textView"
        android:layout_weight="0.09"
        android:textSize="36dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/newpass"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.09"
        android:password="true" />

    <Button
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/reset"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" />

    <FrameLayout
        android:layout_width="367dp"
        android:layout_height="200dp">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar5"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>